--- a/sass/components/_subscribe-section.scss
+++ b/sass/components/_subscribe-section.scss
@@ -2,72 +2,81 @@
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
+  @media screen and (min-width: 320px)and (min-width: 479px) {
+    width: 100%;
+}
+@media screen and (min-width: 480px) {
+    width: 480px;
+}
+@media screen and (min-width: 768px) {
+    width: 768px;
+}
+@media screen and (min-width: 1280px) {
+    width: 1280px;
+}
 }
 img{
   display: block;
 }
-@media screen and (min-width: 1280px) {
-  .sub-container {
+.sub-image{
+    @media screen and (max-width: 767px) {
+        margin: 0 auto;
+    }
+    @media screen and (min-width: 768px)and (max-width: 1279px) {
+        margin-right: 0;
+        margin-left: auto;
+}
+}
+.sub-container{
+    @media screen and (min-width: 1280px) {
     display: flex;
     flex-direction: row-reverse;
-  }
+    }
 }
-@media screen and (max-width: 767px) {
-  .sub-image {
-    margin: 0 auto;
-  }
-}
-@media screen and (min-width: 768px)and (max-width: 1279px) {
-  .sub-image {
-    margin-right: 0;
-    margin-left: auto;
+
+.bac-image{
+    display: block;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    right: 50%;
+    left: 50%; 
+    transform: translate(-50%);
+    @media screen and (max-width: 479px) {
+    width: 100%;
   }
 }
 .subscribe-section{
   padding-bottom: 60px;
-}
-@media screen and (min-width: 320px)and (min-width: 479px) {
-  .container {
-    width: 100%;
+  padding-top: 20px;
+ @media screen and (min-width: 480px) {
+    padding-top: 5px;
   }
-}
-@media screen and (min-width: 480px) {
-  .container {
-    width: 480px;
+   @media screen and (min-width: 768px) {
+    padding-top: 25px;
   }
-}
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
+  @media screen and (min-width: 1280px) {
+    padding-top: 134px;
   }
+  position: relative;
 }
-@media screen and (min-width: 1280px) {
-  .container {
-    width: 1280px;
-  }
-}
+
 .sub-form{
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   justify-content: baseline;
-
-}
-@media screen and (min-width: 768px) {
-  .sub-form {
+  @media screen and (min-width: 768px) {
     display: block;
-
   }
 }
+
 .sub-form__title{
   font-size: 28px;
   line-height: 120%;
   color: #2C2C2C;
   margin-bottom: 20px;
-}
-@media screen and (min-width: 768px) {
-  .sub-form__title {
-    
+  @media screen and (min-width: 768px) {
   font-size: 42px;
   }
 }
@@ -76,16 +85,12 @@ font-weight: 400;
 font-size: 14px;
 line-height: 150%;
 color: #2C2C2C;
-letter-spacing: 0.03em;
-
 margin-bottom: 40px;
-}
 @media screen and (min-width: 768px) {
-  .sub-form__text {
-    
   font-size: 16px;
   }
 }
+
 .sub-form__input{
 padding-left: 12px;
 background: #FFFFFF;
@@ -99,26 +104,17 @@ font-size: 12px;
 line-height: 0.66;
 color: #505050;
 outline: none;
-
-
-}
 @media screen and (max-width: 767px) {
-  .sub-form__input{
     margin-bottom: 20px;
   }
-}
 @media screen and (min-width: 768px) {
-  .sub-form__input {
     margin-right: 22px;
-
   }
-}
 @media screen and (min-width: 1280px) {
-  .sub-form__input {
     margin-right: 32px;
-
   }
 }
+
 .sub-form__btn{
   display: inline-block;
   padding: 11px 22px;
@@ -132,15 +128,16 @@ outline: none;
 
   background: #BBF330;
   border-radius: 30px;
-}
-.sub-form__btn:hover,
-.sub-form__btn:focus,
-.sub-form__btn:active{
+    &:hover,
+    &:focus,
+    &:active{
   background: #B5FF00;
-}
-@media screen and (max-width: 767px) {
-  .sub-form__btn{
+    }
+
+  @media screen and (max-width: 767px) {
     margin-left: 178px;
   }
+
 }
+
 
